--- a/financial.ipynb
+++ b/financial.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
     "'MCDONALD':['餐饮', 'dine in'],\n",
     "'MARSHALLS/HOMES':['购物','日用'],\n",
     "'MEAL':['餐饮', 'dine in'],\n",
-    "'FIDO MOBILE BPY':['通讯'],\n",
+    "'FIDO MOBILE':['Phone Bill'],\n",
     "'WESTERN DRUG MART':['购物'],\n",
     "'IVEY BUSINESS SCHOOL': ['餐饮', 'dine in'],\n",
     "'SEPHORA': ['护肤'],\n",
