--- a/financial.ipynb
+++ b/financial.ipynb
@@ -92,6 +92,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 1. Create a \"mask\" (a list of True/False) for rows containing the string\n",
+    "# case=False makes it catch \"td mha\" or \"TD MHA\"\n",
+    "mask = df_input['Description'].str.contains(\"TD MHA\", case=False, na=False)\n",
+    "\n",
+    "# 2. Update multiple columns for those specific rows in one go\n",
+    "df_exp.loc[mask, ['类型', '账户1', '账户2']] = [\"转账\", \"995\", \"375\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_exp"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 93,
    "metadata": {},
    "outputs": [],
@@ -2952,6 +2975,13 @@
    "source": [
     "df_exp"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
